--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ packages = [
 ]
 
 [tool.poetry.scripts]
-gendiff = "gendiff.scripts.gendiff:main"
+gendiff = "gendiff.scripts.gendiff_script:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
 flake8 = "^3.9.2"
+pytest = "^6.2.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
