--- a/.github/workflows/test_flake8.yml
+++ b/.github/workflows/test_flake8.yml
@@ -26,3 +26,5 @@ jobs:
         poetry install
     - name: run linter
       run: poetry run flake8 gendiff
+    - name: pytest
+      run: poetry run pytest
